--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.2.7",
     "antd": "^5.11.5",
     "axios": "^1.5.0",
+    "bootstrap-icons": "^1.11.2",
     "formik": "^2.4.5",
     "moment": "^2.29.4",
     "react": "^18.2.0",
